--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "microservices-test-app",
   "version": "1.0.0",
   "description": "Microservices test application on Moleculer.js",
-  "main": "index.js",
   "scripts": {
+    "node-1": "ts-node -r tsconfig-paths/register ./node_modules/moleculer/bin/moleculer-runner.js --hot --config moleculer.config.ts services/**/api.service.ts services/**/message.service.ts",
+    "node-2": "ts-node -r tsconfig-paths/register ./node_modules/moleculer/bin/moleculer-runner.js --hot --config moleculer.config.ts services/**/delivery.service.ts",
+    "build": "tsc",
+    "dev": "ts-node -r tsconfig-paths/register ./node_modules/moleculer/bin/moleculer-runner.js --hot --config moleculer.config.ts services/**/*.service.ts",
+    "start": "npm run node-1 & npm run node-2",
     "test": "jest --covarage"
   },
   "repository": {
@@ -17,7 +21,24 @@
   },
   "homepage": "https://github.com/irfatku2/microservices-test-app#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.40",
+    "@types/supertest": "^2.0.11",
+    "jest": "^26.6.3",
+    "jest-cli": "^26.6.3",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "amqplib": "^0.7.1",
+    "moleculer": "^0.14.13",
+    "moleculer-decorators": "^1.3.0",
+    "moleculer-web": "^0.10.0-beta2",
+    "tsconfig-paths": "^3.9.0"
+  },
+  "jest": {
+    "clearMocks": true
   }
 }
